[package]
name = "hayabusa-accounts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pinocchio.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true
hayabusa-ser.workspace = true
hayabusa-system-program.workspace = true