[package]
name = "hayabusa-accounts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa accounts"

[dependencies]
pinocchio-log.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true
hayabusa-ser.workspace = true
hayabusa-system-program.workspace = true
hayabusa-common.workspace = true
hayabusa-context.workspace = true
solana-instruction-view = { workspace = true, features = ["cpi"] }