[package]
name = "hayabusa-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
pinocchio.workspace = true
hayabusa-accounts.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true