[package]
name = "hayabusa-context"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa context"

[dependencies]
pinocchio-log.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true
hayabusa-common.workspace = true