[package]
name = "hayabusa-events-attribute-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
syn.workspace = true
quote.workspace = true
