[package]
name = "hayabusa"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[features]
std = ["pinocchio/std"]

[dependencies]
bytemuck.workspace = true
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
hayabusa-cpi.workspace = true
hayabusa-discriminator.workspace = true
hayabusa-discriminator-derive.workspace = true
hayabusa-decode-instruction.workspace = true
hayabusa-errors.workspace = true
hayabusa-errors-attribute-macro.workspace = true
hayabusa-pda.workspace = true
hayabusa-accounts.workspace = true
hayabusa-context.workspace = true
hayabusa-utility.workspace = true
hayabusa-ser.workspace = true
hayabusa-instruction-attribute-macro.workspace = true
hayabusa-instruction-dispatch-macro.workspace = true
hayabusa-len-derive.workspace = true
hayabusa-owner-program-derive.workspace = true
hayabusa-ser-derive.workspace = true
hayabusa-system-program.workspace = true
hayabusa-from-account-infos-derive.workspace = true
hayabusa-account-attribute-macro.workspace = true