[package]
name = "hayabusa"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

[features]
alloc = ["hayabusa-entrypoint/alloc"]
std = []

[dependencies]
bytemuck.workspace = true
pinocchio-log.workspace = true
hayabusa-cpi.workspace = true
hayabusa-discriminator.workspace = true
hayabusa-discriminator-derive.workspace = true
hayabusa-decode-instruction.workspace = true
hayabusa-errors.workspace = true
hayabusa-errors-attribute-macro.workspace = true
hayabusa-pda.workspace = true
hayabusa-accounts.workspace = true
hayabusa-context.workspace = true
hayabusa-utility.workspace = true
hayabusa-ser.workspace = true
hayabusa-instruction-dispatch-macro.workspace = true
hayabusa-len-derive.workspace = true
hayabusa-owner-program-derive.workspace = true
hayabusa-ser-derive.workspace = true
hayabusa-system-program.workspace = true
hayabusa-from-account-views-derive.workspace = true
hayabusa-account-attribute-macro.workspace = true
hayabusa-entrypoint.workspace = true
hayabusa-syscalls.workspace = true
hayabusa-sysvars.workspace = true
hayabusa-events.workspace = true
hayabusa-events-attribute-macro.workspace = true
solana-account-view.workspace = true
solana-address = { workspace = true, features = ["decode", "bytemuck"] }
solana-instruction-view = { workspace = true, features = ["cpi"] }
solana-program-error.workspace = true