[package]
name = "hayabusa-ser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa serialization utils"

[features]
std = ["dep:borsh"]

[dependencies]
pinocchio.workspace = true
borsh = { workspace = true, optional = true }
bytemuck.workspace = true
hayabusa-discriminator.workspace = true
hayabusa-utility.workspace = true
hayabusa-errors.workspace = true
hayabusa-cpi.workspace = true
hayabusa-system-program.workspace = true