[package]
name = "hayabusa-ser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa serialization utils"

[features]

[dependencies]
pinocchio-log.workspace = true
bytemuck.workspace = true
hayabusa-discriminator.workspace = true
hayabusa-utility.workspace = true
hayabusa-errors.workspace = true
hayabusa-cpi.workspace = true
hayabusa-system-program.workspace = true
solana-instruction-view = { workspace = true, features = ["cpi"] }
hayabusa-common.workspace = true