[package]
name = "hayabusa-sysvars"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa Solana sysvars interface"

[dependencies]
solana-instruction-view.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true
hayabusa-syscalls.workspace = true
hayabusa-common.workspace = true