[package]
name = "hayabusa-token"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pinocchio.workspace = true
pinocchio-pubkey.workspace = true
hayabusa-cpi.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true