[package]
name = "hayabusa-token2022"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Hayabusa Token2022 program interface"
publish = false

[dependencies]
pinocchio.workspace = true
pinocchio-log.workspace = true
pinocchio-pubkey.workspace = true
hayabusa-cpi.workspace = true
hayabusa-errors.workspace = true
hayabusa-utility.workspace = true
hayabusa-ser.workspace = true
hayabusa-accounts.workspace = true