[workspace]
members = [
    "programs/*",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
name = "counter-program"

[workspace.dependencies]
hayabusa = { path = "../../crates/lib", features = ["alloc"] }
hayabusa-token = { path = "../../crates/token" }
bytemuck = { version = "1.21.0", features = ["derive"] }
counter-program = { path = "programs/counter-program" }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
overflow-checks = true
panic = "abort"
